--- a/ideaForge/packages.config
+++ b/ideaForge/packages.config
@@ -6,6 +6,7 @@
   <package id="DocumentFormat.OpenXml" version="2.16.0" targetFramework="net48" />
   <package id="DotNetKit.Wpf.AutoCompleteComboBox" version="1.4.0" targetFramework="net48" />
   <package id="ExcelNumberFormat" version="1.1.0" targetFramework="net48" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net48" />
   <package id="IKVM" version="8.2.0" targetFramework="net48" />
   <package id="itext7" version="7.2.2" targetFramework="net48" />
   <package id="itext7.commons" version="7.2.2" targetFramework="net48" />
